--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">I Am Poor</string>
-    <string name="title">I Am Poor</string>
+    <string name="app_name">I am Poor</string>
+    <string name="title">I am Poor</string>
+    <string name="tltle2">Poor</string>
     <string name="View">ImageView1</string>
 </resources>
